--- a/src/index.css
+++ b/src/index.css
@@ -63,12 +63,17 @@ p#tilbakemelding,
   padding-left: 5px;
 }
 
-/*dette fjerner pilene i input felte*/
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
 
 input {
   height: 50px;
