--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,11 @@ button:focus-visible {
   z-index: 2;
 }
 
-/* ------------------------------------------- */
+.game-type-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
 
 .difficulty-buttons {
   display: flex;
@@ -138,6 +142,14 @@ button:focus-visible {
   justify-content: center;
   gap: 40px;
   padding-bottom: 50px;
+}
+  
+
+
+button#quiz , button#kasse{
+  height: 45px;
+  width: 130px;
+  border-radius: 10px;
 }
 
 button#mix {
@@ -445,6 +457,15 @@ button#avsluttSpill:hover {
     gap: 10px;
     padding: 0 8px 12px 8px;
     width: 100%;
+  }
+
+  button#quiz,
+  button#kasse {
+    border-radius: 15px;
+    height: 50px;
+    width: 50%;
+    font-size: large;
+    font-weight: bolder;
   }
 
   /* Standard knapp: full bredde i containere */
